# wrap

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BUILD  BUILD.bazel  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  test.yml
benchmarks/: BUILD.bazel  CMakeLists.txt
cmake/: wrap-config.cmake.in
examples/hello/: BUILD.bazel  CMakeLists.txt  main.cpp
examples/middleware/: BUILD.bazel  CMakeLists.txt  main.cpp
examples/router/: BUILD.bazel  CMakeLists.txt  main.cpp
examples/static/: BUILD.bazel  CMakeLists.txt  main.cpp
examples/static/public/: index.html
include/wrap/: app.h  filter.h  handler.h  middleware.h  request.h  response.h  router.h  static.h  wrap.h
src/: app.cpp  wrap.cpp
tests/: BUILD.bazel  CMakeLists.txt  wrap_test.cpp
