load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_license//rules:license.bzl", "license")

package(
    default_package_metadata = ["//:license"],
    default_visibility = ["//visibility:public"],
)

exports_files(
    ["LICENSE"],
)

license(
    name = "license",
    license_kinds = ["@rules_license//licenses/spdx:MIT"],
    license_text = "LICENSE",
)

cc_library(
    name = "wrap",
    srcs = [
        "src/app.cpp",
        "src/wrap.cpp",
    ],
    hdrs = glob([
        "include/**/*.h",
    ]),
    defines = [
        'WRAP_VERSION="0.1.0"',
    ],
    includes = [
        "include",
    ],
    deps = [
        "@fmt",
        "@folly//folly:json",
        "@proxygen//proxygen:httpserver",
        "@proxygen//proxygen/httpserver/filters:direct_response_handler",
    ],
)
