module(
    name = "wrap",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")

bazel_dep(name = "fmt", version = "12.1.0")
bazel_dep(name = "folly", version = "2025.01.13.00.bcr.6")
bazel_dep(name = "proxygen", version = "2025.02.10.00.bcr.1")

archive_override(
    module_name = "brotli",
    urls = ["https://github.com/google/brotli/archive/refs/heads/master.tar.gz"],
    strip_prefix = "brotli-master",
    integrity = "sha256-g9qfnFCLV2tY8nT8gH+182t0JTAMFh39ra+IvlZZ2+c=",
)

archive_override(
    module_name = "double-conversion",
    urls = ["https://github.com/google/double-conversion/archive/refs/heads/master.tar.gz"],
    strip_prefix = "double-conversion-master",
    integrity = "sha256-tsIR+7cJBCWz3VSa4VHBKsCJDA0lnkK5eoKLn5+G8zA=",
)

archive_override(
    module_name = "fizz",
    urls = ["https://github.com/facebookincubator/fizz/archive/refs/tags/v2026.03.30.00.tar.gz"],
    strip_prefix = "fizz-2026.03.30.00",
    integrity = "sha256-zPaGw90ANwEsxibgEn33bM1+vYygSZzFUMD0k4LbtTM=",
    patches = ["//build/fizz:fizz-bazel.patch"],
    patch_strip = 1,
)

archive_override(
    module_name = "mvfst",
    urls = ["https://github.com/facebook/mvfst/archive/refs/tags/v2026.03.30.00.tar.gz"],
    strip_prefix = "mvfst-2026.03.30.00",
    integrity = "sha256-sofHxbMXQwqokMXpUt3gIPohIETSGHVv5Qyq3VksV4A=",
    patches = ["//build/mvfst:mvfst-bazel.patch"],
    patch_strip = 1,
)

archive_override(
    module_name = "proxygen",
    urls = ["https://github.com/facebook/proxygen/archive/refs/tags/v2026.03.30.00.tar.gz"],
    strip_prefix = "proxygen-2026.03.30.00",
    integrity = "sha256-u2DsJmFlDBG6xzh52eauVduRP9fHpA21r4xlfQX96JY=",
    patches = ["//build/proxygen:proxygen-bazel.patch"],
    patch_strip = 1,
)

single_version_override(
    module_name = "range-v3",
    version = "0.12.0",
    patches = ["//build/range-v3:range-v3-bazel.patch"],
    patch_strip = 1,
)

single_version_override(
    module_name = "snappy",
    version = "1.2.2.bcr.3",
)

single_version_override(
    module_name = "liburing",
    version = "2.14",
)
