module(
    name = "wrap",
    version = "0.1.0",
)

bazel_dep(name = "fmt", version = "12.1.0")
bazel_dep(name = "folly", version = "2026.05.25.00")
bazel_dep(name = "proxygen", version = "2026.05.25.00")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_license", version = "1.0.0")

bazel_dep(name = "cpp-httplib", version = "0.46.0", dev_dependency = True)
bazel_dep(name = "gflags", version = "2.2.2.bcr.1", dev_dependency = True)
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)
